--- a/sdp_project/templates/core/dashboard.html
+++ b/sdp_project/templates/core/dashboard.html
@@ -1,6 +1,6 @@
 {% extends 'core/base.html' %}
 {% block content %}
-<div class="mt-2"></i> 
+<div class="mt-3"></i> 
 <h3 class="mb-2">Welcome <strong class="text-emphasis">{{user.username}}</strong> to your Dashboard</h3>
 </div> 
   <br/>
@@ -30,9 +30,13 @@
     </div>
   </div>
 
-  <div  >
+  <div>
+   <h4 class="mb-2"><strong>Recent Sales</strong></h4>
     <div class="card shadow-sm">
-      <div class="card-header"><i class="bi bi-list-ul"></i> Recent Sales</div>
+      <div class="card-header d-flex justify-content-between">
+        <strong>Customer</strong>
+        <strong>Status</strong>
+      </div>
         <ul class="list-group list-group-flush">
           {% for sale in recent_sales %}
             <li class="list-group-item d-flex justify-content-between align-items-center">
