--- a/sdp_project/templates/core/base.html
+++ b/sdp_project/templates/core/base.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.2/dist/darkly/bootstrap.min.css" />
     <!-- Bootstrap Icons CSS -->
     <link rel="stylesheet" href="{% static 'css/bootstrap-icons.css' %}" />
+    <link rel='icon' type='image/png' href="{% static 'images/favicon.png' %}"'/>
     <style>
       body {
         min-height: 100vh;
