--- a/sdp_project/templates/core/browse_sale.html
+++ b/sdp_project/templates/core/browse_sale.html
@@ -62,7 +62,7 @@
           <td>{{ sale.created_at|date:"Y-m-d H:i" }}</td>
           <td>
             <a
-              href="{% url 'edit_sale' sale.id %}"
+              href="{% url 'update_sale' sale.id %}"
               class="btn btn-sm btn-outline-primary"
               title="Edit Sale"
               data-bs-toggle="tooltip"
