Refactor code structure for improved readability and maintainability

--- a/sdp_project/templates/core/about.html
+++ b/sdp_project/templates/core/about.html
@@ -27,14 +27,14 @@
         Welcome to our Sales App! We are dedicated to providing the best solutions for managing your sales and inventory efficiently.
       </p>
 
-      <h4>Our Team</h4>
+      <h4 class="text-white">Our Team</h4>
       <p>
         Our team is composed of experienced professionals passionate about delivering high-quality software solutions tailored to your needs.
         We believe in continuous improvement and are always looking for ways to enhance our products and services.
         We are committed to providing exceptional customer service and support to ensure your success.
       </p>
 
-      <h4>Our Mission</h4>
+      <h4 class="text-white">Our Mission</h4>
       <p>
         Our mission is to empower businesses with tools that simplify sales processes, improve productivity, and drive growth.
         We strive to create innovative solutions that meet the evolving needs of our customers.
@@ -42,7 +42,7 @@
         We are here to help you succeed in your sales endeavors.
       </p>
 
-      <h4>Our Vision</h4>
+      <h4 class="text-white">Our Vision</h4>
       <p>
         Our vision is to be a leading provider of sales solutions that transform the way businesses operate.
         We aim to be at the forefront of technology and innovation in the sales industry.
