--- a/sdp_project/templates/core/browse_sale.html
+++ b/sdp_project/templates/core/browse_sale.html
@@ -6,7 +6,7 @@
 {% block content %}
 <div class="container bg-dark text-light rounded-4 p-4 mt-4 shadow-lg">
   <div class="d-flex justify-content-between align-items-center mb-3">
-    <h2 class="mb-0 text-light">Sales</h2>
+    <h2 class="mb-0 text-white">Sales</h2>
     <a href="{% url 'create_sale' %}" class="btn btn-primary">
       <i class="bi bi-plus-circle"></i> Create Sale
     </a>
