--- a/sdp_project/templates/core/base.html
+++ b/sdp_project/templates/core/base.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.2" />
-    <title>SaleApp</title>
+    <title>Money Worth</title>
     <!-- Bootswatch Darkly Theme -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.2/dist/darkly/bootstrap.min.css" />
     <!-- Bootstrap Icons CSS -->
@@ -89,7 +89,7 @@
             </clipPath>
             </defs>
           </svg>
-          Insighter
+          Moneyworth
         </a>
         <button
           class="navbar-toggler collapsed"
@@ -185,7 +185,7 @@
             </defs>
           </svg>
         </a>
-        <span class="mb-3 mb-md-0">© 2025 Insighter</span>
+        <span class="mb-3 mb-md-0">© 2025 Moneyworth</span>
       </div>
       <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
         <li class="ms-3">
