--- a/sdp_project/templates/core/home.html
+++ b/sdp_project/templates/core/home.html
@@ -5,24 +5,14 @@
 <div
   class="jumbotron text-left bg-dark mb-4 mt-3 rounded-3 border border-secondary align-content-center p-5 text-center text-white position-relative"
   style="
-    background: url('{% static 'images/jumbotron.jpg' %}') center center/cover;
-    overlay: rgba(0, 0, 0, 0.5);
-    min-height: 400px;
-    height: 60vh;
+    background: url('{% static 'images/jumbotron.jpg' %}') center center;
+    min-height: 400px;  
+    background-size: cover;
+    background-position: center;  
+    background-blend-mode: overlay;
+    background-color: rgba(0, 0, 0, 0.5);
   "
 >
-  <div
-    class="mask py-2"
-    style="
-      background-color: rgba(0, 0, 0, 0.5);
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      z-index: 1;
-    "
-  ></div>
   <div
     class="position-absolute top-50 start-50 translate-middle text-center w-100"
     style="z-index: 2"
@@ -93,7 +83,7 @@
         buyers and sellers, offering great deals and a seamless experience."
       </i>
     </p>
-    {% if not user.is_authenticated %}
+    {% if not request.user.is_authenticated %}
     <div class="flex-fill mx-4 mb-5  d-grid gap-2 d-md-block">
       <a
         class="btn btn-primary mb-2 mb-md-0 me-md-2"
@@ -121,7 +111,7 @@
   </div>
 </div>
 
-{% if user.is_authenticated %}
+{% if request.user.is_authenticated %}
 <div class="row align-items-md-stretch g-3 g-md-4">
   <div class="col-12 col-md-6 pb-2">
     <div
