--- a/sdp_project/templates/core/about.html
+++ b/sdp_project/templates/core/about.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block title %}About Us{% endblock %}
 {% block content %}
-  <div class="bg-dark text-light rounded border">
+  <div class="bg-dark text-light rounded border border-secondary">
     <!-- Hero Section -->
     <div 
       class="d-flex align-items-end rounded-top text-white" 
