--- a/sdp_project/templates/core/home.html
+++ b/sdp_project/templates/core/home.html
@@ -2,115 +2,50 @@
 {% load static %} 
 {% block title %}Home{%endblock %}
 {% block content %}
-<div
-  class="jumbotron text-left bg-dark mb-4 mt-3 rounded-3 border border-secondary align-content-center p-5 text-center text-white position-relative"
-  style="
-    background: url('{% static 'images/jumbotron.jpg' %}') center center;
-    min-height: 400px;  
+<div class="jumbotron align-items-center text-left bg-dark text-light px-3 mb-4 mt-4 rounded-3 border border-secondary"
+   style="
+    background: url('{% static 'images/jumbotron.jpg' %}') center
+      center/cover;
+    min-height: 250px;
     background-size: cover;
-    background-position: center;  
+    background-position: center;
     background-blend-mode: overlay;
-    background-color: rgba(0, 0, 0, 0.5);
-  "
->
-  <div
-    class="position-absolute top-50 start-50 translate-middle text-center w-100"
-    style="z-index: 2"
-  >
-    <div class="container" style="max-width: 400px; width: 90vw">
-      <svg
-        xmlns="http://www.w3.org/2000/svg"
-        width="120"
-        height="120"
-        viewBox="0 0 49 49"
-        fill="none"
-        class="img-fluid mb-3"
-        >
-        <rect width="48.1311" height="48.13" rx="24.065" fill="#5D5FEF" />
-        <g clip-path="url(#clip0_72_750)">
-          <path
-            d="M22.0273 9.93765V9.93565C22.0527 9.83032 22.0787 9.71698 22.1707 9.65898C22.3453 9.54765 22.814 9.39832 24.0653 9.39832C25.3167 9.39832 25.7853 9.54765 25.96 9.65898C26.052 9.71698 26.078 9.83032 26.1027 9.93565V9.93765C26.168 10.2156 26.306 10.8383 26.436 11.6196C31.5307 12.5843 35.546 16.5996 36.5107 21.6936C37.0746 21.7874 37.6356 21.8986 38.1927 22.027H38.1947C38.3 22.0523 38.4133 22.0783 38.4713 22.1703C38.5827 22.3456 38.732 22.8136 38.732 24.065C38.732 25.3163 38.5827 25.785 38.4713 25.9596C38.4133 26.0516 38.3 26.0776 38.1947 26.1023H38.1927C37.6356 26.2307 37.0746 26.3419 36.5107 26.4356C35.546 31.5303 31.5307 35.5456 26.4367 36.5103C26.3429 37.0743 26.2318 37.6352 26.1033 38.1923V38.1943C26.078 38.2996 26.052 38.413 25.96 38.471C25.7847 38.5823 25.3167 38.7316 24.0653 38.7316C22.814 38.7316 22.3453 38.5823 22.1707 38.471C22.0787 38.413 22.0527 38.2996 22.028 38.1943V38.1923C21.8996 37.6352 21.7884 37.0743 21.6947 36.5103C16.6 35.5456 12.5847 31.5303 11.62 26.4363C11.056 26.3426 10.4951 26.2314 9.93802 26.103H9.93601C9.83068 26.0776 9.71735 26.0516 9.65935 25.9596C9.54802 25.785 9.39868 25.3163 9.39868 24.065C9.39868 22.8136 9.54802 22.345 9.65935 22.1703C9.71735 22.0783 9.83068 22.0523 9.93601 22.0276H9.93802C10.4951 21.8992 11.056 21.7881 11.62 21.6943C12.5847 16.5996 16.6 12.5843 21.694 11.6196C21.8247 10.8383 21.9627 10.2156 22.0273 9.93765Z"
-            stroke="white"
-            stroke-width="1.5"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-          />
-          <path
-            d="M15.3987 24.065C15.3987 28.8516 19.2787 32.7316 24.0653 32.7316C28.852 32.7316 32.732 28.8516 32.732 24.065C32.732 19.2783 28.852 15.3983 24.0653 15.3983C19.2787 15.3983 15.3987 19.2783 15.3987 24.065Z"
-            stroke="white"
-            stroke-width="1.5"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-          />
-          <path
-            d="M26.732 21.4456C26.732 21.4456 25.6653 20.7316 24.0653 20.7316C22.732 20.7316 21.3987 21.4456 21.3987 22.3983C21.3987 24.779 26.732 23.351 26.732 25.7316C26.732 26.6843 25.3987 27.3983 24.0653 27.3983C22.4653 27.3983 21.3987 26.6843 21.3987 26.6843"
-            stroke="white"
-            stroke-width="1.5"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-          />
-          <path
-            d="M24.0654 20.7316V19.3983"
-            stroke="white"
-            stroke-width="1.5"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-          />
-          <path
-            d="M24.0654 28.7316V27.3983"
-            stroke="white"
-            stroke-width="1.5"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-          />
-        </g>
-        <defs>
-          <clipPath id="clip0_72_750">
-            <rect
-              width="32"
-              height="32"
-              fill="white"
-              transform="translate(8.06543 8.065)"
-            />
-          </clipPath>
-        </defs>
-      </svg>
-    </div>
-    <h1 class="text-white h3 h1-md"><strong>Welcome to Insighter!</strong></h1>
-    <p class="mx-4 fs-6 fs-md-5 text-muted" style="max-width: 90vw">
+    background-color: rgba(0, 0, 0, 0.5);">
+  <div class="p-5 align-content-center text-center rounded-10">
+    <svg xmlns="http://www.w3.org/2000/svg" width="200" height="200" viewBox="0 0 49 49" fill="none">
+              <rect width="48.1311" height="48.13" rx="24.065" fill="#5D5FEF"/>
+            <g clip-path="url(#clip0_72_750)">
+            <path d="M22.0273 9.93765V9.93565C22.0527 9.83032 22.0787 9.71698 22.1707 9.65898C22.3453 9.54765 22.814 9.39832 24.0653 9.39832C25.3167 9.39832 25.7853 9.54765 25.96 9.65898C26.052 9.71698 26.078 9.83032 26.1027 9.93565V9.93765C26.168 10.2156 26.306 10.8383 26.436 11.6196C31.5307 12.5843 35.546 16.5996 36.5107 21.6936C37.0746 21.7874 37.6356 21.8986 38.1927 22.027H38.1947C38.3 22.0523 38.4133 22.0783 38.4713 22.1703C38.5827 22.3456 38.732 22.8136 38.732 24.065C38.732 25.3163 38.5827 25.785 38.4713 25.9596C38.4133 26.0516 38.3 26.0776 38.1947 26.1023H38.1927C37.6356 26.2307 37.0746 26.3419 36.5107 26.4356C35.546 31.5303 31.5307 35.5456 26.4367 36.5103C26.3429 37.0743 26.2318 37.6352 26.1033 38.1923V38.1943C26.078 38.2996 26.052 38.413 25.96 38.471C25.7847 38.5823 25.3167 38.7316 24.0653 38.7316C22.814 38.7316 22.3453 38.5823 22.1707 38.471C22.0787 38.413 22.0527 38.2996 22.028 38.1943V38.1923C21.8996 37.6352 21.7884 37.0743 21.6947 36.5103C16.6 35.5456 12.5847 31.5303 11.62 26.4363C11.056 26.3426 10.4951 26.2314 9.93802 26.103H9.93601C9.83068 26.0776 9.71735 26.0516 9.65935 25.9596C9.54802 25.785 9.39868 25.3163 9.39868 24.065C9.39868 22.8136 9.54802 22.345 9.65935 22.1703C9.71735 22.0783 9.83068 22.0523 9.93601 22.0276H9.93802C10.4951 21.8992 11.056 21.7881 11.62 21.6943C12.5847 16.5996 16.6 12.5843 21.694 11.6196C21.8247 10.8383 21.9627 10.2156 22.0273 9.93765Z" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+            <path d="M15.3987 24.065C15.3987 28.8516 19.2787 32.7316 24.0653 32.7316C28.852 32.7316 32.732 28.8516 32.732 24.065C32.732 19.2783 28.852 15.3983 24.0653 15.3983C19.2787 15.3983 15.3987 19.2783 15.3987 24.065Z" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+            <path d="M26.732 21.4456C26.732 21.4456 25.6653 20.7316 24.0653 20.7316C22.732 20.7316 21.3987 21.4456 21.3987 22.3983C21.3987 24.779 26.732 23.351 26.732 25.7316C26.732 26.6843 25.3987 27.3983 24.0653 27.3983C22.4653 27.3983 21.3987 26.6843 21.3987 26.6843" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+            <path d="M24.0654 20.7316V19.3983" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+            <path d="M24.0654 28.7316V27.3983" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+            </g>
+            <defs>
+            <clipPath id="clip0_72_750">
+            <rect width="32" height="32" fill="white" transform="translate(8.06543 8.065)"/>
+            </clipPath>
+            </defs>
+    </svg>
+    <h1 class="text-white">Welcome to <strong>Moneyworth!</strong></h1>
+    <p class="col-lg-8 mx-auto fs-5 text-light">
       <i>
-        "Discover the easiest way to buy and sell items online. SaleApp connects
-        buyers and sellers, offering great deals and a seamless experience."
+        "Discover the easiest way to buy and sell items online. SaleApp connects buyers and sellers, offering great deals and a seamless experience."
       </i>
     </p>
-    {% if not request.user.is_authenticated %}
-    <div class="flex-fill mx-4 mb-5  d-grid gap-2 d-md-block">
-      <a
-        class="btn btn-primary mb-2 mb-md-0 me-md-2"
-        href="{% url 'login' %}"
-        role="button"
-        >Log In</a
-      >
-      <a class="btn btn-secondary" href="{% url 'register' %}" role="button"
-        >Register</a
-      >
+  {% if not user.is_authenticated %}
+    <div class="d-grid gap-2 d-md-block">
+      <a class="btn btn-primary" href="{% url 'login' %}" role="button">Log In</a>
+      <a class="btn btn-secondary" href="{% url 'register' %}" role="button">Register</a>
     </div>
-    {% else %}
-    <div class="flex-fill mx-4 mb-5 d-grid gap-2 d-md-block">
-      <a
-        class="btn btn-primary mb-2 mb-md-0 me-md-2"
-        href="{% url 'about' %}"
-        role="button"
-        >About</a
-      >
-      <a class="btn btn-secondary" href="{% url 'contact' %}" role="button"
-        >Contact</a
-      >
+  {% else %}
+    <div class="d-grid gap-2 d-md-block">
+      <a class="btn btn-primary" href="{% url 'about' %}" role="button">About</a>
+      <a class="btn btn-secondary" href="{% url 'contact' %}" role="button">Contact</a>
     </div>
-    {% endif %}
-  </div>
+  {% endif %}
 </div>
-
+</div>
 {% if request.user.is_authenticated %}
 <div class="row align-items-md-stretch g-3 g-md-4">
   <div class="col-12 col-md-6 pb-2">
@@ -170,4 +105,5 @@
     </div>
   </div>
 </div>
-{% endif %} {% endblock %}
+{% endif %} 
+{% endblock %}
