--- a/sdp_project/templates/core/base.html
+++ b/sdp_project/templates/core/base.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.2" />
-    <title>Money Worth</title>
+    <title>Moneyworth</title>
     <!-- Bootswatch Darkly Theme -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.2/dist/darkly/bootstrap.min.css" />
     <!-- Bootstrap Icons CSS -->
