--- a/sdp_project/templates/core/home.html
+++ b/sdp_project/templates/core/home.html
@@ -30,7 +30,8 @@
     <h1 class="text-white">Welcome to <strong>Moneyworth!</strong></h1>
     <p class="col-lg-8 mx-auto fs-5 text-light">
       <i>
-        "Discover the easiest way to buy and sell items online. SaleApp connects buyers and sellers, offering great deals and a seamless experience."
+        "The number one tool a <strong>Sales manager</strong> needs to track all their sales
+        at all times."
       </i>
     </p>
   {% if not user.is_authenticated %}
