--- a/sdp_project/templates/core/base.html
+++ b/sdp_project/templates/core/base.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.2/dist/darkly/bootstrap.min.css" />
     <!-- Bootstrap Icons CSS -->
     <link rel="stylesheet" href="{% static 'css/bootstrap-icons.css' %}" />
-    <link rel='icon' type='image/png' href="{% static 'images/favicon.png' %}"'/>
+    <link rel='icon' type='image/png' href="{% static 'images/favicon.png' %}" />
+    <!-- Bootstrap CSS -->
     <style>
       body {
         min-height: 100vh;
@@ -162,7 +163,8 @@
     </nav>
 
     <main class="flex-grow-1 p-4" style="margin-top: 56px;">
-      {% block content %}
+      {% block content %} 
+       
       {% endblock %}
     </main>
 
@@ -207,7 +209,6 @@
     </footer>
 
     <!-- Bootstrap JS and dependencies -->
-    <script src="{% static 'js/jquery.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
     <script src="{% static 'js/popper.min.js' %}"></script>
   </body>
