Update home page text for clarity: change phrases to enhance user understanding of sale creation and browsing.

--- a/sdp_project/templates/core/home.html
+++ b/sdp_project/templates/core/home.html
@@ -65,7 +65,7 @@
       <div>
         <h2 class="h5 h2-md"><strong>Create Your Own Sale </strong></h2>
         <p class="fs-6 fs-md-5 text-muted">
-          Start selling your items today! Create a sale listing with ease and
+          Record your sold items! Create a sale listing with ease and
           reach potential buyers in no time.
         </p>
       </div>
@@ -93,8 +93,8 @@
       <div>
         <h2 class="h5 h2-md"><strong>Browse Sales</strong></h2>
         <p class="fs-6 fs-md-5 text-muted">
-          Explore a wide range of items listed by other users. Find great deals
-          and unique products in just a few clicks.
+          Run through your sales! Browse through all the sales and 
+          track your sales history.
         </p>
       </div>
       <a
