--- a/sdp_project/templates/core/login_and_register.html
+++ b/sdp_project/templates/core/login_and_register.html
@@ -9,7 +9,7 @@
 
 {% block content %}
 
-  <div class="container py-5 px-5 bg-dark rounded-4 shadow-sm mt-4 w-75 mx-auto">
+  <div class="container py-5 px-5 border border-secondary bg-dark rounded-4 shadow-sm mt-4 w-75 mx-auto">
     <div class="row g-4 justify-content-center px-2">
       <div class="col-md-6">
         <div class="container" 
@@ -21,7 +21,8 @@
                     border-radius: 0.5rem;
                     background-blend-mode: overlay;
                     background-color: rgba(0, 0, 0, 0.5); 
-                     ">
+                     "
+          >
           <div class="d-flex flex-column justify-content-center py-4 align-items-center h-100 text-white">
             <svg xmlns="http://www.w3.org/2000/svg" width="200" height="200" viewBox="0 0 49 49" fill="none">
               <rect width="48.1311" height="48.13" rx="24.065" fill="#1A71F6"/>
