--- a/sdp_project/templates/core/contact.html
+++ b/sdp_project/templates/core/contact.html
@@ -66,7 +66,7 @@
   <div class="row g-4 justify-content-center">
     <!-- Profile Card 1 -->
     <div class="col-md-6 col-lg-4">
-      <div class="card profile-card h-100 text-center border border-secondary-subtle">
+      <div class="card profile-card h-100 text-center border border-secondary">
         <div class="card-body d-flex flex-column align-items-center">
           <img src={% static "images/mila.jpg" %} alt="User Profile" class="rounded-circle profile-img mb-3" width="150" height="150">
           <h3 class="card-title mb-2">Mila Samantha Likiya</h3>
@@ -85,7 +85,7 @@
     </div>
     <!-- Profile Card 2 -->
     <div class="col-md-6 col-lg-4">
-      <div class="card profile-card h-100 text-center border border-secondary-subtle">
+      <div class="card profile-card h-100 text-center border border-secondary">
         <div class="card-body d-flex flex-column align-items-center">
           <img src="{% static 'images/nelson.jpg'%}" alt="User Profile" class="rounded-circle profile-img mb-3" width="150" height="150">
           <h3 class="card-title mb-2">Kazibwe David Nelson</h3>
@@ -104,7 +104,7 @@
     </div>
     <!-- Profile Card 3 -->
     <div class="col-md-6 col-lg-4">
-      <div class="card profile-card h-100 text-center border border-secondary-subtle">
+      <div class="card profile-card h-100 text-center border border-secondary">
         <div class="card-body d-flex flex-column align-items-center">
           <img src={% static "images/waji.jpg" %} alt="User Profile" class="rounded-circle profile-img mb-3" width="150" height="150">
           <h3 class="card-title mb-2">Sseruwagi Marvin Don</h3>
@@ -123,7 +123,7 @@
     </div>
     <!-- Profile Card 4 -->
     <div class="col-md-6 col-lg-4">
-      <div class="card profile-card h-100 text-center border border-secondary-subtle">
+      <div class="card profile-card h-100 text-center border border-secondary">
         <div class="card-body d-flex flex-column align-items-center">
           <img src={%static "images/mayanja.jpg"%} alt="User Profile" class="rounded-circle profile-img mb-3" width="150" height="150">
           <h3 class="card-title mb-2">Mayanja Joel Stephen</h3>
